# billiards

./: .gitignore  .gitmodules  CMakeLists.txt
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/drodin/billiards/: Installer.java  MySDLActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/drawable/: splash.xml
android/app/src/main/res/values/: ic_launcher_background.xml  styles.xml
apple/ios/: LaunchScreen.storyboard
apple/macos/: app.entitlements
cmake/Hunter/: config.cmake
cmake/template/: iOSBundleInfo.plist.in
data/locale/de/: foobillard.txt  language.txt  wetab-foobillard.txt
data/locale/en/: foobillard.txt  language.txt  wetab-foobillard.txt
data/locale/ru/: foobillard.txt  wetab-foobillard.txt
osx/: config.m
src/: Makefile.am  ball.c  billard3d.c  billard3d.h  billmove.c  evaluate_move.c  fire.c  font.c  font.h  foobillardplus.rc  helpscreen.c  language.c  language.h  menu.c  menu.h  mesh.c  mesh.h  net_socket.c  options.c  options.h  png_loader.c  queue.c  room.c  sound_stuff.c  sound_stuff.h  sys_stuff.c  sys_stuff.h  table.c  textobj.c  vmath.h
